- Added ability to edit and delete saved kiosk configurations.

--- a/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
+++ b/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
@@ -318,6 +318,11 @@
     justify-content: end;
 }
 
+.check-in-page .saved-configuration-button .subtitle {
+    flex-grow: 1;
+    text-align: left;
+}
+
 /*
  * Welcome Screen
  */
