- Change Application Color to have `33` post-fix opacity.

--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -259,18 +259,18 @@
   --color-interface-softer:    #010409;
   --color-interface-softest:   #0d1117;
   
-  --color-critical-soft:    #EE7725;
+  --color-critical-soft:    #EE772533;
   --color-critical-strong:  #FEDEC8;
 
-  --color-danger-soft:      #D70015;
+  --color-danger-soft:      #D7001533;
   --color-danger-strong:    #FFCCD1;
 
-  --color-info-soft:        #007AFF;
+  --color-info-soft:        #007AFF33;
   --color-info-strong:      #D6EAFF;
 
-  --color-success-soft:     #248A3D;
+  --color-success-soft:     #248A3D33;
   --color-success-strong:   #D7F4DE;
 
-  --color-warning-soft:     #E58600;
+  --color-warning-soft:     #E5860033;
   --color-warning-strong:   #FFECD1;
 }
