- update the upload-control border-radius.

--- a/RockWeb/Styles/rock-components/upload-controls.less
+++ b/RockWeb/Styles/rock-components/upload-controls.less
@@ -51,7 +51,7 @@
         color: @btn-danger-color;
         cursor: pointer;
         background-color: @btn-danger-bg;
-        border-radius: @border-radius-base;
+        border-radius: 2px;
       }
     }
   }
@@ -125,7 +125,7 @@
       color: @btn-danger-color;
       cursor: pointer;
       background-color: @btn-danger-bg;
-      border-radius: @border-radius-base;
+      border-radius: 2px;
     }
   }
 
