- small CSS tweak to provide a default background color to card images to show when there is no image.

--- a/RockWeb/Styles/utilities/_card.less
+++ b/RockWeb/Styles/utilities/_card.less
@@ -146,6 +146,7 @@
 .card-img-bottom {
   flex-shrink: 0; // For IE: https://github.com/twbs/bootstrap/issues/29396
   width: 100%; // Required because we use flexbox and this inherently applies align-self: stretch
+  background-color: var(--color-interface-softer);
 }
 
 .card-img,
