- added a new hero section component.

--- a/RockWeb/Styles/_components.less
+++ b/RockWeb/Styles/_components.less
@@ -37,6 +37,7 @@
 @import "rock-components/custom-buttons.less";         // 37. Custom Buttons
 @import "rock-components/rating.less";                 // 38. Rating Input
 @import "rock-components/value-list.less";             // 39. Value List Control
+@import "rock-components/hero-section.less";           // 40. Hero Section
 
 // 40. Color Picker
 @import (less) "./bootstrap-colorpicker/colorpicker.less";
