- Migrate hero-section.less and change in card.less to scss

--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -127,6 +127,7 @@
 @import 'rock-components/ant-select';
 @import 'rock-components/profile';
 @import 'rock-components/connection-request.scss';
+@import 'rock-components/hero-section';
 
 
 /* ===================== BLOCK =================== */
