- Changed card-footer to softest color & hero-title text styling

--- a/RockWeb/Styles/rock-components/hero-section.less
+++ b/RockWeb/Styles/rock-components/hero-section.less
@@ -37,6 +37,7 @@
   padding: var(--spacing-tiny) 0;
   font-weight: var(--font-weight-bold);
   margin: 0;
+  text-align: center;
 }
 
 .hero-section-description {
@@ -49,3 +50,10 @@
   overflow: hidden;
   padding-bottom: 0;
 }
+
+@media (max-width: 767px) {
+  .hero-section-title {
+      font-size: var(--font-size-h3);
+  }
+}
+
