--- a/RockWeb/Styles/utilities/_card.less
+++ b/RockWeb/Styles/utilities/_card.less
@@ -97,6 +97,7 @@
   padding: @card-cap-padding-y @card-cap-padding-x;
   background-color: @card-cap-bg;
   border-top: @card-border-width solid @card-border-color;
+  background-color: var(--color-interface-softest);
 
   &:last-child {
     border-radius: 0 0 @card-inner-border-radius @card-inner-border-radius;
