- Update the background color of the Emoji picker backdrop to match Rock for consistency.

--- a/RockWeb/Styles/_tox-overrides.less
+++ b/RockWeb/Styles/_tox-overrides.less
@@ -73,3 +73,7 @@
   background-color: rgba(238,119,37,0.3);
   cursor: pointer;
 }
+
+.tox .tox-dialog-wrap .tox-dialog-wrap__backdrop {
+  background: rgba(94, 94, 94, 0.6);
+}
