--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -128,6 +128,7 @@
 @import 'rock-components/profile';
 @import 'rock-components/connection-request.scss';
 @import 'rock-components/hero-section';
+@import 'rock-components/tox-overrides';
 
 
 /* ===================== BLOCK =================== */
