--- a/RockWeb/Styles/style-v2/rock-components/_tox-overrides.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_tox-overrides.scss
@@ -73,3 +73,7 @@
   background-color: rgba(238,119,37,0.3);
   cursor: pointer;
 }
+
+.tox .tox-dialog-wrap .tox-dialog-wrap__backdrop {
+  background: rgba(94, 94, 94, 0.6);
+}
