- Implement a Tri-State button.

--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -6,8 +6,8 @@
   --color-interface-stronger:  #0d1117;
   --color-interface-strong:    #3d444d;
   --color-interface-medium:    #8B8BA7;
-  --color-interface-soft:      #eff2f5;
-  --color-interface-softer:    #f6f8fa;
+  --color-interface-soft:      #D9D9E3;
+  --color-interface-softer:    #f1f1f8;
   --color-interface-softest:   #FFFFFF;
 
   // APPLICATION COLORS 
