--- a/RockWeb/Themes/RockV2/Layouts/Site.Master
+++ b/RockWeb/Themes/RockV2/Layouts/Site.Master
@@ -55,32 +55,33 @@ through Christ, we find forgiveness, salvation, and the assurance of eternal lif
     <script src="<%# ResolveRockUrl("~~/Assets/Scripts/theme.js", true) %>"></script>
 
   <script>
-     function handleThemeChange() {
-        const attributeName = "theme";
-        const htmlElement = document.documentElement;
 
-        let theme = localStorage.getItem(attributeName);
+            let attributeName = "theme"
+            var htmlElement = document.documentElement;
 
-        if (theme === null) {
-            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-                theme = "light";
+            const states = ["light", "dark", "system"];
+            let currentStateIndex;
+
+            const value = localStorage.getItem(attributeName);
+            if (value != null) {
+                htmlElement.setAttribute(attributeName, value);
+                currentStateIndex = states.indexOf(value);
             } else {
-                theme = "dark"
-            }
-        } else {
-            if (theme === "dark") {
-                theme = "light";
-            } else {
-                theme = "dark";
-            }
-        }
+                currentStateIndex = 2;
+            };
+      document.addEventListener("DOMContentLoaded", function () {
+          const button = document.getElementById("themeSwitchButton");
 
-        localStorage.setItem(attributeName, theme)
+          button.addEventListener("click", () => {
 
-        const value = localStorage.getItem(attributeName);
-        htmlElement.setAttribute(attributeName, value);
-    }
+              currentStateIndex = (currentStateIndex + 1) % states.length;
 
+              localStorage.setItem(attributeName, states[currentStateIndex]);
+
+              const value = localStorage.getItem(attributeName);
+              htmlElement.setAttribute(attributeName, value);
+          });
+      });
   </script>
 
     <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
@@ -110,7 +111,7 @@ through Christ, we find forgiveness, salvation, and the assurance of eternal lif
                 <div id="fixed-header" class="header-content" role="navigation">
                     <div class="navbar-zone-login"><Rock:Zone Name="Login" runat="server" /></div>
                     <div>
-                        <button class="theme-toggle" type="button" onClick="handleThemeChange()"><i id="theme-icon" class="ti theme-mode-icon"></i></button>
+                        <button id="themeSwitchButton" class="theme-toggle" type="button"><i id="theme-icon" class="ti theme-mode-icon"></i></button>
                     </div>
                     <div class="navbar-zone-header"><Rock:Zone Name="Header" runat="server" /></div>
                 </div>
