--- a/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
+++ b/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
@@ -170,12 +170,22 @@
     color: var(--color-interface-strong);
 }
 
-.check-in-page .btn.btn-info {
+.check-in-page .illustrated-button .btn.btn-info {
     background: color-mix(in srgb, var(--color-primary) 100%, #000000 10%);
     color: var(--color-interface-softest);
+    border-left: 1px solid color-mix(in srgb, var(--color-primary-tint) 100%, transparent 80%);
 }
 
-.check-in-page .btn.btn-info:hover {
+.check-in-page .illustrated-button .btn.btn-info:hover {
+    background: color-mix(in srgb, var(--color-primary) 100%, #000000 19%);
+}
+
+.check-in-page .illustrated-button .remove-attendee-button {
+    background-color: color-mix(in srgb, var(--color-primary) 100%, #000000 10%);
+    border-left: 1px solid color-mix(in srgb, var(--color-primary-tint) 100%, transparent 80%);
+}
+
+.check-in-page .illustrated-button .remove-attendee-button:hover {
     background: color-mix(in srgb, var(--color-primary) 100%, #000000 19%);
 }
 
@@ -583,7 +593,7 @@
 .check-in-page .attendance-card .attendance-detail {
     border-radius: var(--spacing-xsmall);
     background-color: var(--color-primary);
-    color: var(--theme-white);
+    color: var(--color-interface-softest);
     padding: var(--spacing-tiny) var(--spacing-xsmall);
     display: flex;
     justify-content: space-between;
