- Restyled the image with icon controll to be called billboard.

--- a/RockWeb/Styles/_components.less
+++ b/RockWeb/Styles/_components.less
@@ -51,9 +51,9 @@
 @import "rock-components/switch.less";                 // 46. Custom Switch
 @import "rock-components/kpi.less";                    // 47. KPI
 @import "rock-components/progress-tracker.less";       // 48. Progress Tracker
-                             // 49. Form Builder - MOVED TO EMBEDDED STYLES
+                                                       // 49. Form Builder - MOVED TO EMBEDDED STYLES
 @import "rock-components/obsidian-dropdownlist.less";  // 50. Obsidian Drop Down Lists
 @import "rock-components/color-selector.less";         // 51. Color Selector
-@import "rock-components/image-with-icon.less";        // 52. Image with Icon
+@import "rock-components/billboard.less";              // 52. Billboard
 
 @import "rock-components/custom-select.less";           // 53. Custom Select
