- Lava template updated for enroll, created new LMS .less file

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -192,6 +192,7 @@
 @import "_blocks-groups.less";
 @import "_blocks-finance.less";
 @import "_blocks-crm.less";
+@import "_blocks-lms.less";
 @import "_blocks-communication.less";
 @import "_blocks-workflow.less";
 @import "_blocks-events.less";
