--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -1,38 +1,494 @@
 /*
-    Used to manage styles related to the LMS page
+    Used to manage styles related to the LMS pages.
 
-    1. Page Styles
-    2. Header
-    3. Badge Bar
-    4. Family Bar
-    5. Page Tabs
-    6. Edit Group Page
-    7. Styles for Page Tabs
-    8. Add Family Page
-    9. Fluidbox
-    10. Responsive Overrides
-    11. Person Merge
-    12. Person Page Views
-    13. Deceased / Inactive Styles
-    14. Bulk Update
-    15. Photo Upload
-    16. Duplicate Pages
-    17. DISC & Assessments
-    19. Edit Person
+    1. LMS Home Navigation
+      1.1 Program List
+      1.2 Course List
+      1.3 Course Detail
+      1.4 Class Enrollment
+    2. Class Workspace
+      2.1 Class Overview
+      2.2 Class Activities/Assignments
+        2.2.1 Assessment
+        2.2.2 Point Assessment
+        2.2.3 Acknowledgement
+        2.2.4 File Upload
+        2.2.5 Video Watch
 */
 
-// 1. Page Styles
+
+// 1. LMS Home Navigation
 // -------------------------
 
+  // 1.1 Program List
+  // ------------------
 
-// 2. Header
+  // 1.2 Course List
+  // ------------------
+
+  // 1.3 Course Detail
+  // ------------------
+
+  // 1.4 Class Enrollment
+  // ----------------------
+
+  .enrollment-block-container {
+    max-width: 545px;
+}
+
+
+// 2. Class Workspace
 // -------------------------
 
-.originate-call {
-  &::before {
-    margin-right: 6px;
-    font-family: @fa-font-face;
-    font-weight: @fa-theme-weight;
-    content: @fa-var-phone-square;
+  // 2.1 Class Overview
+  // -------------------------
+
+  .facilitator-portal {
+    padding-right: var(--spacing-large);
+}
+
+
+
+  /* Workspace Tabbar */
+  .workspace-tab-bar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--spacing-large);
+    align-items: center;
+  }
+
+  /* Workspace Class Overview */
+  .workspace-class-sidebar .section:not(:last-child) {
+    margin-bottom: var(--spacing-large) 0;
+    padding-bottom: var(--spacing-large);
+  }
+
+  .class-progress-bar .progress {
+    margin-bottom: 4px !important;
+  }
+
+  .overview-section,
+  .announcements-section,
+  .notifications-section {
+    border: 1px solid var(--color-interface-soft);
+    border-radius: 12px;
+    padding: var(--spacing-large);
+  }
+
+  .card-notification,
+  .card-announcement {
+    margin-bottom: var(--spacing-large);
+    background-color: var(--color-interface-softer) !important;
+  }
+
+  .card-date {
+    color: var(--color-interface-medium);
+  }
+
+  .notification-section:not(:last-child),
+  .announcment-section:not(:last-child) {
+    margin-bottom: var(--spacing-large);
+  }
+
+  .overview-section .title,
+  .notifications-section .title,
+  .announcements-section .title {
+    margin-bottom: 32px !important;
+    margin-top: 0 !important;
+  }
+
+
+  .notification-title {
+    margin-top: var(--spacing-tiny);
+    margin-bottom: 0;
+  }
+
+  .announcement-title {
+    font-size: var(--font-size-h4);
+    margin-top: var(--spacing-tiny) !important;
+    margin-bottom: var(--spacing-medium) !important;
+  }
+
+  .announcement-content {
+    h1, h2 {
+    font-size: var(--font-size-h5);
   }
 }
+
+  .announcement-content {
+    h1, h2 {
+        font-size: var(--font-size-h5);
+    }
+
+    h3, h4, h5, h6 {
+        font-size: var(--font-size-small);
+        font-weight: var(--font-weight-bold);
+    }
+}
+
+  .facilitator-comment-container {
+    padding: 8px;
+  }
+
+  /* Workspace Activities */
+  @media (min-width: 768px) {
+    .workspace-block-content {
+        display: flex;
+    }
+
+    .workspace-navigation-pane {
+        width: 33%;
+        min-width: 300px;
+        margin-right: var(--spacing-large);
+        align-self: baseline;
+        border-radius: var(--rounded-large) !important;
+    }
+
+    .workspace-main-content {
+        width: 67%;
+        padding: var(--spacing-large);
+        border: 1px solid var(--color-interface-soft);
+        border-radius: var(--rounded-large);
+        display: flex;
+        flex-direction: column;
+    }
+  }
+
+  /* Activity List */
+  .custom-select-item-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .activity-item-content {
+    display: flex;
+    align-items: center;
+  }
+
+  .activity-item-content .activity-item-icon {
+    margin-right: var(--spacing-xsmall);
+  }
+
+  .activity-item-content h5 {
+    margin: 0;
+  }
+
+  .activity-item-content .activity-item-icon .icon {
+    color: #fff;
+  }
+
+  .custom-select-mobile-wrapper {
+    margin-bottom: var(--spacing-large);
+    /* add spacing below the activity selector on mobile */
+  }
+
+  .available {
+    background-color: var(--color-interface-softest);
+  }
+
+  .not-available {
+    background-color: var(--color-interface-softest);
+  }
+
+  .is-completed {
+    background-color: var(--color-interface-softest);
+  }
+
+  .is-selected {
+    background-color: var(--color-interface-softer);
+  }
+
+
+
+
+  // 2.2 Class Activities/Assignments
+  // --------------------------------
+
+  .activity-item-detail-container {
+    width: 100%;
+  }
+
+.activity-item-grade-container {
+    width: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lms-completion-container {
+    margin-top: var(--spacing-medium);
+  }
+
+  .lms-completion-container {
+
+    h1, h2 {
+      font-size: var(--font-size-h4);
+    }
+
+    h3, h4, h5, h6 {
+      font-size: var(--font-size-h5);
+    }
+  }
+
+  .content-page-container {
+    border: 1px solid var(--color-interface-soft);
+    border-radius: 12px;
+    padding: var(--spacing-large);
+  }
+
+
+    .footer-button-section {
+      margin-top: var(--spacing-large);
+    }
+
+    // 2.2.1 Assessment
+    // -------------------------
+
+    .clickable-help {
+      margin-left: 6px;
+    }
+
+    /* Multiple Choice Weight, Show Results checkboxes... should be on a single line. */
+    .minor-fields-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    /* Stack Assessment item fields */
+    .assessment-items-section {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    /* With the title bar having a title and add button on left and right respectively. */
+    .assessment-items-section > .assessment-items-title-bar {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 8px;
+    }
+
+    .assessment-items-container > .assessment-item-container {
+        display: grid;
+        grid-template-columns: 24px minmax(80px, 30%) 66%;
+        row-gap: 8px;
+        column-gap: 12px;
+    }
+
+    .assessment-item {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .assessment-item-reorder-section {
+        grid-column: 1;
+        padding-left: 4px;
+
+        /* Stack the reorder and delete buttons with space between. */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .assessment-item-type-section {
+        grid-column: 2;
+    }
+
+    .assessment-item-configuration-section {
+        grid-column: 3;
+    }
+
+    .assessment-term-section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .configuration-footer-buttons {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    div.summary-sub-title {
+        margin-bottom: 12px;
+    }
+
+    .header-content-section-summary {
+        margin-bottom: 16px;
+    }
+
+    // Multiple Choice
+    // -------------------------
+
+    .lms-assessment-item-multiple-choice-container > div {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .add-answer-button > i.fa-plus-circle {
+        border-radius: 4px;
+        background-color: var(--color-default-soft);
+        color: var(--color-default-strong);
+        padding: 8px;
+        cursor: pointer;
+    }
+
+    .answers-list {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 4px;
+        padding-right: 12px;
+    }
+
+    .answer-row {
+        display: grid;
+        grid-template-columns: calc(100% - 30px) 25px;
+        column-gap: 8px;
+    }
+
+    /*
+        Because each answer-row is a single row grid use margin instead of row-gap.
+        Skip the first row since the label includes margin-bottom already.
+    */
+    .answer-row:not(.answer-row-0) {
+        margin-bottom: 12px;
+    }
+
+    /* Textbox for an answer. */
+    .answer-row:first-child {
+        grid-column: 1;
+    }
+
+    /* Remove button for an answer. */
+    .answer-ro:last-child {
+        grid-column: 2;
+        padding: 3px;
+        max-height: 38px;
+    }
+
+    /* Add a margin-top to the first Remove button to offset the label of the first answer. */
+    .answer-row-0  > .remove-answer-button {
+        margin-top: 25px;
+        margin-bottom: 12px;
+    }
+
+    .correct-answer-field {
+        width: 80%;
+    }
+
+    /* Summary specific styles  */
+    .summary-screen-question-header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .summary-answers-list {
+        display: block;
+        margin: 8px;
+
+    }
+
+    .multiple-choice-item-question.summary-screen {
+        font-weight: bold;
+    }
+
+    .label.label-default.selected-response {
+        background-color: var(--color-interface-medium);
+    }
+
+    // Short Answer
+    // ----------------
+
+    .question-header {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .summary-screen-question-header {
+        margin-bottom: 16px;
+    }
+
+    .assessment-item-short-answer-configuration-container {
+        display: grid;
+        column-gap: 8px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .configuration-field-question {
+        grid-column: 1 / 3;
+        grid-row: 1;
+    }
+
+    .configuration-field-help-text {
+        grid-column: 1 / 3;
+        grid-row: 2;
+    }
+
+    .configuration-field-question-weight {
+        grid-column: 1 / 2;
+        grid-row: 3;
+    }
+
+    .configuration-field-answer-box-rows {
+        grid-column: 1 / 2;
+        grid-row: 4;
+    }
+
+    .configuration-field-max-character-count {
+        grid-column: 2 / 3;
+        grid-row: 4;
+    }
+
+    .question-section {
+        font-weight: bold;
+    }
+
+
+    // 2.2.2 Point Assessment
+    // -------------------------
+
+
+    // 2.2.3 Acknowledgement
+    // -------------------------
+
+    .header-content-section {
+      font-weight: var(--font-weight-semibold);
+    }
+
+
+
+    .is-required-section {
+      margin-top: var(--spacing-large);
+    }
+
+
+
+
+    // 2.2.4 File Upload
+    // -------------------------
+
+    .grading-section {
+      margin-top: 12px;
+      display: grid;
+      grid-template-columns: 50%;
+    }
+
+    .file-section {
+        grid-row: 1;
+        grid-column: 1;
+    }
+
+    .score-section {
+        grid-row: 1;
+        grid-column: 2;
+    }
+
+
+    // 2.2.5 Video Watch
+    // -------------------------
+
+    .footer-section {
+      margin-top: var(--spacing-xsmall);
+    }
