--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -109,21 +109,91 @@
 
   .overview-section,
   .announcements-section,
-  .notifications-section {
+  .notifications-section,
+  .empty-announcements-container,
+  .empty-notifications-container {
     border: 1px solid var(--color-interface-soft);
     border-radius: 12px;
     padding: var(--spacing-large);
+  }
+
+  /* Override the default h4 margins in the overview section. */
+  h4.section-label {
+      margin-top: 0;
+      margin-bottom: var(--spacing-small);
+  }
+
+  .facilitator-list-item {
+      margin-bottom: var(--spacing-xsmall);
+  }
+
+  .facilitator-email {
+    margin-top: 4px;
+  }
+
+  .announcement-cards-container,
+  .notification-cards-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .empty-announcements-container,
+  .empty-notifications-container {
+    align-items: center;
+    background-color: var(--color-interface-softer);
+  }
+
+  .no-announcements-icon,
+  .no-notifications-icon {
+    color: var(--color-interface-strong);
+  }
+
+  .no-announcements-title,
+  .no-notifications-title {
+    font-weight: var(--font-weight-bold);
+    padding-top: var(--spacing-xsmall);
+    padding-bottom: var(--spacing-tiny);
+    margin: 0;
+  }
+
+  .no-announcements-text,
+  .no-notifications-text {
+    font-size: var(--font-size-small);
+    color: var(--color-interface-medium);
+  }
+
+  .empty-grade {
+    background-color: var(--color-interface-soft);
+    color: var(--color-interface-strongest);
   }
 
   .card-notification,
   .card-announcement {
     margin-bottom: var(--spacing-large);
     background-color: var(--color-interface-softer) !important;
+    display: flex;
+    flex-direction: column;
   }
 
-  .card-date {
-    color: var(--color-interface-medium);
+  .notification-title {
+      margin-top: var(--spacing-tiny);
+      margin-bottom: var(--spacing-tiny);
+      font-weight: var(--font-weight-semibold);
   }
+
+  .notification-content {
+      color: var(--color-interface-strong);
+  }
+
+  .view-all-button {
+    display: flex;
+    justify-content: center;
+  }
+
+.card-date {
+  color: var(--color-interface-medium);
+  font-weight: var(--font-weight-bold);
+}
 
   .notification-section:not(:last-child),
   .announcment-section:not(:last-child) {
@@ -136,7 +206,6 @@
     margin-bottom: 32px !important;
     margin-top: 0 !important;
   }
-
 
   .notification-title {
     margin-top: var(--spacing-tiny);
@@ -172,7 +241,7 @@
   }
 
   .facilitator-comment-container {
-    padding: 8px;
+    padding: var(--spacing-small);
   }
 
   /* Workspace Activities */
@@ -215,10 +284,15 @@
 
   .activity-item-content h5 {
     margin: 0;
+    font-weight: var(--font-weight-semibold);
   }
 
   .activity-item-content .activity-item-icon .icon {
     color: #fff;
+  }
+
+  .activity-time {
+      margin-bottom: var(--spacing-tiny);
   }
 
   .custom-select-mobile-wrapper {
