- Remove the button group box-shadow.

--- a/RockWeb/Styles/Bootstrap/button-groups.less
+++ b/RockWeb/Styles/Bootstrap/button-groups.less
@@ -31,6 +31,13 @@
   .btn-group + .btn-group {
     margin-left: -1px;
   }
+
+  .btn.btn-primary {
+    &:focus,
+    &:not(:disabled):not(.disabled):active:focus {
+      box-shadow: none;
+    }
+  }
 }
 
 // Optional: Group multiple button groups together for a toolbar
